flowise-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowise
  namespace: flowise
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: flowise
