mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: mysql-std
  labels:
    app: mysql
    type: standalone
spec:
  type: NodePort
  ports:
  - name: server
    port: 3306
    protocol: TCP
    targetPort: 3306
    nodePort: 31009
  selector:
    app: mysql
    type: standalone
