nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    # Anotasi untuk NodePort, jika diperlukan
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
      nodePort: 30080  # Tentukan port NodePort untuk HTTP
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
      nodePort: 30443  # Tentukan port NodePort untuk HTTPS
  loadBalancerIP: ""  # Pastikan loadBalancerIP tidak diatur jika menggunakan NodePort
